# commo-pdv

./: .gitignore  LICENSE  README.md  docker-compose.yml
accounts/: forms.py  models.py  urls.py  views.py
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/apps/accounts/: serializers.py  urls.py  views.py
backend/commo/: asgi.py  settings.py  urls.py  wsgi.py
commo/: apps.py  views.py
core/: settings.py  urls.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  config.ts  main.ts
frontend/src/layout/: AuthLayout.vue  DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/services/: axiosInstance.ts  userPreference.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue
frontend/src/views/auth/: LoginView.vue
templates/: base.html  home.html
templates/accounts/: login.html
templates/partials/: _footer.html  _navbar.html
